--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "description": "",
   "dependencies": {
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^8.1.2"
   }
 }
